--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://vipullpandey007:Vipulfirstdatabase@cluster0.xu9lkbn.mongodb.net/chatapp"
+NEXTAUTH_SECRET="NEXTAUTH"
+
+GITHUB_ID=
+GITHUB_SECRET=
