--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL=""
+DATABASE_URL="mongodb+srv://vipullpandey007:Vipulfirstdatabase@cluster0.xu9lkbn.mongodb.net/chatapp"
 NEXTAUTH_SECRET="NEXTAUTH"
 
 GITHUB_ID=
